--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,21 +1,22 @@
 language: cpp
 
- compiler: clang
+compiler: 
+ - clang 
 
- before_install:
-  - brew update
-  - brew install qt5 
-  - brew install cmake
+before_install:
+ - brew update
+ - brew install qt5 
+ - brew install cmake
 
- before_script:
-   - mkdir BUILD
-   - cd BUILD
-   - cmake -DCMAKE_PREFIX_PATH=/usr/local/Cellar/qt5/5.2.1 -DSC_QT=1 .. --debug-output
+before_script:
+ - mkdir BUILD
+ - cd BUILD
+ - cmake -DCMAKE_PREFIX_PATH=/usr/local/Cellar/qt5/5.2.1 -DSC_QT=1 .. --debug-output
 
- script: make
+script: make
 
- notifications:
-   email:
-     - scott@artificia.org
-   on_success: always
-   on_failure: always
+notifications:
+ email:
+   - scott@artificia.org
+ on_success: always
+ on_failure: always
