First attempt at dual os builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,27 @@ language: objective-c
 compiler: 
  - clang
 
+os:
+ - linux
+ - osx
+
+cache: apt
+
 before_install:
- - brew update
- - brew install cmake qt5 
+ - ifmac () { if [[ $TRAVIS_OS_NAME == osx ]]; then eval $@; fi; }
+ - iflin () { if [[ $TRAVIS_OS_NAME == lin ]]; then eval $@; fi; }
+ - ifmac brew update
+ - ifmac brew install cmake qt5 
+ - iflin sudo apt-add-repository -y ppa:ubuntu-sdk-team/ppa
+ - iflin sudo apt-get update
+ - iflin sudo apt-get install build-essential libjack-dev libsndfile1-dev libasound2-dev libavahi-client-dev libicu-dev libreadline6-dev libfftw3-dev libxt-dev pkg-config cmake subversion libstdc++5 qt5-default qt5-qmake qttools5-dev qttools5-dev-tools qtdeclarative5-dev libqt5webkit5-dev
 
 before_script:
  - mkdir BUILD
  - cd BUILD
- - cmake -DCMAKE_PREFIX_PATH=/usr/local/Cellar/qt5/5.3.0 -DSC_QT=1 .. --debug-output
+ - ifmac cmake -DCMAKE_PREFIX_PATH=/usr/local/Cellar/qt5/5.3.0 -DSC_QT=1 .. --debug-output
+ - iflin dpkg -L qt5-default
+ - iflin cmake .. --debug-output
 
 script: make
 
