--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-language: objective-c
-
 compiler: 
  - clang
 
@@ -23,7 +21,7 @@ before_script:
  - cd BUILD
  - ifmac cmake -DCMAKE_PREFIX_PATH=/usr/local/Cellar/qt5/5.3.0 -DSC_QT=1 .. --debug-output
  - iflin dpkg -L qt5-default
- - iflin cmake .. --debug-output
+ - iflin cmake -DSC_EL=no -DCMAKE_PREFIX_PATH=/usr/lib/x86_64-linux-gnu/qt5/ -DCMAKE_INSTALL_PREFIX:PATH=$PWD/Install -DCMAKE_BUILD_TYPE=Release .. --debug-output
 
 script: make
 
