--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
  - ifmac brew install cmake qt5 
  - iflin sudo apt-add-repository -y ppa:ubuntu-sdk-team/ppa
  - iflin sudo apt-get update
- - iflin sudo apt-get install build-essential libjack-dev libsndfile1-dev libasound2-dev libavahi-client-dev libicu-dev libreadline6-dev libfftw3-dev libxt-dev pkg-config cmake subversion libstdc++5 qt5-default qt5-qmake qttools5-dev qttools5-dev-tools qtdeclarative5-dev libqt5webkit5-dev
+ - iflin sudo apt-get install gcc-4.7 build-essential libjack-dev libsndfile1-dev libasound2-dev libavahi-client-dev libicu-dev libreadline6-dev libfftw3-dev libxt-dev pkg-config cmake subversion libstdc++5 qt5-default qt5-qmake qttools5-dev qttools5-dev-tools qtdeclarative5-dev libqt5webkit5-dev
 
 before_script:
  - mkdir BUILD
