--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
  - iflin sudo apt-add-repository -y ppa:ubuntu-sdk-team/ppa
  - iflin sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
  - iflin sudo apt-get update
- - iflin sudo apt-get install gcc-4.7 g++-4.7 build-essential libjack-dev libsndfile1-dev libasound2-dev libavahi-client-dev libicu-dev libreadline6-dev libfftw3-dev libxt-dev pkg-config cmake subversion libstdc++5 qtbase5-dev qt5-qmake qttools5-dev qttools5-dev-tools qtdeclarative5-dev libqt5webkit5-dev
+ - iflin sudo apt-get install gcc-4.7 g++-4.7 apt-rdepends build-essential libjack-dev libsndfile1-dev libasound2-dev libavahi-client-dev libicu-dev libreadline6-dev libfftw3-dev libxt-dev pkg-config cmake subversion libstdc++5 qtbase5-dev qt5-qmake qttools5-dev qttools5-dev-tools qtdeclarative5-dev libqt5webkit5-dev
  - iflin sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.6 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.6 
  - iflin sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.7 
  - iflin sudo update-alternatives --auto gcc
@@ -24,8 +24,8 @@ before_script:
  - mkdir BUILD
  - cd BUILD
  - ifmac cmake -DCMAKE_PREFIX_PATH=/usr/local/Cellar/qt5/5.3.0 -DSC_QT=1 .. --debug-output
- - iflin dpkg -L qt5-default
  - iflin cmake -DSC_EL=no -DCMAKE_PREFIX_PATH=/usr/lib/x86_64-linux-gnu/qt5/ -DCMAKE_INSTALL_PREFIX:PATH=$PWD/Install -DCMAKE_BUILD_TYPE=Release .. --debug-output
+ - iflin apt-rdepends libqt4-dev
 
 script: make
 
