--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ deploy:
    on:
      condition: $TRAVIS_OS_NAME = osx
      repo: scztt/supercollider
+     all_branches: true
  - provider: releases
    api_key:
      secure: K3X3Ja+j4iKwb6SOpxebV5acVBl5C8tXoTBWb3bO9iwJjYpzIYFi7Mr5zUIz/0hx8pgyr2eNrWEL/YOOyg7BzfPG7wiSfjDPpsPRYvx4XQslXOivsfljKy/rK4wN1edj5ZK7ydlygBaNkrlxH2JQDjTNvveYr+b6LHrD7N0mWqE=
