--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ before_deploy:
  - cd Install
  - zip -r $HOME/artifacts/SC-$COMMIT_NAME.zip SuperCollider
  - echo $FWD_HTML > $HOME/artifacts/$TRAVIS_BRANCH-latest.html
- - 'if [[ ! -z "$TRAVIS_TAG" ]]; then echo $FWD_HTML > $HOME/artifacts/$TRAVIS_TAG.html; fi;'
+ - 'if [[ $TRAVIS_TAG != "head" ]]; then echo $FWD_HTML > $HOME/artifacts/$TRAVIS_TAG.html; fi;'
 
 deploy:
  - provider: s3
