Slight adjustment to zip

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ before_deploy:
  - export BUILD_PREFIX=$TRAVIS_REPO_SLUG/$TRAVIS_OS_NAME
  - export FWD_HTML='<html><head><meta http-equiv="refresh" content="0; url=SC-'$COMMIT_NAME'.zip" /></head></html>'
  - mkdir $HOME/artifacts
- - cd Install/Supercollider
- - zip -r $HOME/artifacts/SC-$COMMIT_NAME.zip .
+ - cd Install
+ - zip -r $HOME/artifacts/SC-$COMMIT_NAME.zip SuperCollider
  - echo $FWD_HTML > $HOME/artifacts/$TRAVIS_BRANCH-latest.html
  - 'if [[ $TRAVIS_TAG != "head" ]]; then echo $FWD_HTML > $HOME/artifacts/$TRAVIS_TAG.html; fi;'
 
