Squashed commit of the following:
commit 261bce648ddad9168f14dbd731734990ccda919e
Merge: d9c3281 f3ac97f
Author: Scott Carver <scott@artificia.org>
Date:   Thu Jan 29 18:27:17 2015 -0300

    Merge branch 'qt52' into sclang-app

    Conflicts:
    	SCDoc/CMakeLists.txt

commit d9c3281c4ac4f793ffbd70ac550c62cfa4f3e1be
Author: Scott Carver <scott@artificia.org>
Date:   Thu Jan 29 18:20:15 2015 -0300

    cmake: update DeployQt5.cmake

commit 1ae8ec2998d5305b3b98825fa69dfc6eb2ff1857
Author: Scott Carver <scott@artificia.org>
Date:   Thu Jan 29 18:18:45 2015 -0300

    cmake: Migrate libraries and scsynth instance to sclang.app

commit 2b03cda85967b52eaed1d18b4150cee6359f6cc0
Author: Scott Carver <scott@artificia.org>
Date:   Thu Jan 29 00:40:08 2015 -0300

    cmake: ensure sclang executable is properly bundled

commit 456999bb0b9395dfdf6a8b591c747c332c96111f
Author: Scott Carver <scott@artificia.org>
Date:   Sat Nov 8 16:58:14 2014 -0800

    ide: point to correct in-bundle sclang location

commit 0e52f57b0ff397309cf88f24ca3604ff500cbf60
Author: Scott Carver <scott@artificia.org>
Date:   Sat Nov 8 16:57:55 2014 -0800

    build: step one in building separable sclang.app

    This successfully creates a standalone launchable sclang.app

commit 5b2132340c175efec15f24a7676c55830a9c8a10
Author: Scott Carver <scott@artificia.org>
Date:   Sat Nov 8 16:14:53 2014 -0800

    lang: Ensure sclang works even if stdin isn't available

    When launched via double-clicking on it's app bundle, sclang throws an exception when trying to connect to stdin. This fixes. It's not clear exactly why stdin isn't available - but in case of launching via Finder, there would be nothing to read from stdin anyway, so this should have no bearing.

commit f31191ad28a4961dc82905ab3b8da99a05be4681
Author: Scott Carver <scott@artificia.org>
Date:   Sat Nov 8 13:27:38 2014 -0800

    build: source groups and cleanup

commit 994888fa863aa75861c700ad3a8103427e2f0e19
Author: Scott Carver <scott@artificia.

--- a/SCDoc/CMakeLists.txt
+++ b/SCDoc/CMakeLists.txt
@@ -19,3 +19,5 @@ include_directories(
     ${SCDOC_DIR}
 )
 
+source_group("SCDoc\\src" FILES ${SCDOC_SRCS})
+source_group("SCDoc\\include" FILES ${SCDOC_HDRS})
